# geode

./: .gitignore  .gp.md  Cargo.toml  Changes.md  README.md  TODO.md  attempt-1.yaml  build.rs  constellation.ods  parse.py
.github/workflows/: build.yml
design/: framework.md  references.bib  research.tex
example_configs/: compositional-injection-basic.geode  compositional-injection-basic.geode.yaml  compositional-injection-basic.yaml  input_file_static.xml  test.yaml
examples/: parsing.rs  test-geoffrey.rs
frameworks/: darts.yaml  geos.yaml
src/: lib.rs  main.rs  math.rs  model.rs  shape.rs
src-prolog/: experiment-1.pro  to-prolog-we-go.pro
src/math/: vec3.rs
src/model/: domain.rs  material.rs
src/parse/: error.rs  mod.rs  parser.rs  quantity.rs  range.rs  reference.rs  unit.rs
