# cargo-features = ["edition2024"]

[package]
name = "geode-for-geoscience"
description ="The Geode CLI for geoscience simulation."
license-file = "./LICENSE"
repository = "https://github.com/ShaitanLyss/geode"
version = "0.2.1"
edition = "2021"

[dependencies]
strict-yaml-rust = "0.1.2"
uom = { version = "0.37.0", features = ["f64", "si", "std"], default-features = false, package = "geo-uom"}
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"
serde_yaml = "0.9.34"
clap = { version = "4.5.21", features = ["derive"] }
thiserror = "2.0.3"
serde_json = "1.0.133"
itertools = "0.13.0"
schemars = { version="0.8.21", features = ["preserve_order"]}
const_format = "0.2.33"

[[bin]]
name = "test_parser"
test = false


[[bin]]
name = "geode"
path = "src/main.rs"

[lib]
name = "geode"


# [profile.release]
# lto = true
# opt-level = 3
# panic = "abort"
# codegen-units=1
